Fixed spacing for folder icon

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     --spacing-small: 10px;
     --spacing-medium: 20px;
     --spacing-large: 50px;
-    --spacing-nested: 40px;
+    --spacing-nested: 38px;
     --spacing-folders: 5px;
     --border-radius: 10px;
     --sidebar-width: 340px;
